--- a/main.html
+++ b/main.html
@@ -7,10 +7,23 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+<thead>
+	<tr>
+		<th>name</th>
+		<th>roll number</th>
+	</tr>
+	
+	<tbody>
+		<tr>
+			<td>Raushan</td>
+			<td>18423</td>
+		</tr>
+		<tr>
+			<td>ayush</td>
+			<td>18343</td>
+		</tr>
+	</tbody>
 </body>
+	</thead>
 
 </html>
