--- a/main.html
+++ b/main.html
@@ -7,23 +7,23 @@
 </head>
 
 <body>
-<thead>
-	<tr>
-		<th>name</th>
-		<th>roll number</th>
-	</tr>
-	
-	<tbody>
+
+	<table>
+   <tr>
+	   <th>name</th>
+	   <th>roll number</th>
+   </tr>
+<tr>
+	<td>Raushan Kumar</td>
+	<td>18423</td>
+</tr>
 		<tr>
-			<td>Raushan</td>
-			<td>18423</td>
-		</tr>
-		<tr>
-			<td>ayush</td>
-			<td>18343</td>
-		</tr>
-	</tbody>
+	<td>Ayush Kumar</td>
+	<td>18426</td>
+</tr>
+		
+	</table>
 </body>
-	</thead>
+	
 
 </html>
