--- a/main.html
+++ b/main.html
@@ -9,10 +9,12 @@
 <body>
 
 	<table>
+		<thead>
    <tr>
 	   <th>name</th>
 	   <th>roll number</th>
    </tr>
+		</thead>
 <tr>
 	<td>Raushan Kumar</td>
 	<td>18423</td>
