--- a/main.html
+++ b/main.html
@@ -15,6 +15,7 @@
 	   <th>roll number</th>
    </tr>
 		</thead>
+		<tbody>
 <tr>
 	<td>Raushan Kumar</td>
 	<td>18423</td>
@@ -23,7 +24,7 @@
 	<td>Ayush Kumar</td>
 	<td>18426</td>
 </tr>
-		
+		</tbody>
 	</table>
 </body>
 	
